<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".EditProfileActivity"
    tools:ignore="HardcodedText,Autofill,RtlHardcoded">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="✖"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="(213) 740 - 4530"
        android:inputType="phone"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_first_name" />

    <EditText
        android:id="@+id/edit_zip_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="90089"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_state_code"
        app:layout_constraintTop_toBottomOf="@+id/edit_street_name" />

    <EditText
        android:id="@+id/edit_state_code"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="CA"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/edit_city_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_street_name" />

    <EditText
        android:id="@+id/edit_city_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Los Angeles"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_street_number" />

    <EditText
        android:id="@+id/edit_street_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="941"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/edit_street_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_number" />

    <EditText
        android:id="@+id/edit_street_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Bloom Walk"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_number" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="✔"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Tommy"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edit_phone_number"
        app:layout_constraintEnd_toStartOf="@+id/edit_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Trojan"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edit_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="top|left"
        android:hint="A little about me..."
        android:includeFontPadding="true"
        android:inputType="textMultiLine|text"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_city_name" />

    <TextView
        android:id="@+id/invalid_email_text_view"
        android:layout_width="214dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
