...
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_title_prompt"
        app:layout_constraintTop_toBottomOf="@+id/listing_image" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
...
